--- a/src/app/componentes/clientes/finalizados/finalizados.page.html
+++ b/src/app/componentes/clientes/finalizados/finalizados.page.html
@@ -12,7 +12,7 @@
 </ion-header>
 
 <ion-content class="background">
-  <ion-list-header color="light">
+  <ion-list-header >
     Pedidos finalizados
   </ion-list-header>
 
@@ -22,7 +22,7 @@
     </ion-label>
   </ion-item>
   <ion-item color="tertiary" *ngFor="let ped of pedidos">
-    <ion-label color="light">
+    <ion-label >
       <h2 class="ion-text-capitalize bold">{{ped.usuario?.nombre}}</h2>
       <h3>PEDIDO #{{ped.id}}</h3>
       <h3>MESA #{{ped.mesa?.numero}}</h3>
